--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="left-column">
-                    <img id="profile_pic" src="images/bilal.jpeg" alt="">
+                    <img id="profile_pic" src="images/profile.png" alt="">
                     <h5 style="text-align: center;line-height: 0;">Personalise Theme</h5>
 					<div id="theme-options-wrapper">
 						<div data-mode="light" id="light-mode" class="theme-dot"></div>
